--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="1">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="Mohammad Ridwan Hasan" class="img-fluid card-img-top" />
+                                <img src="members/ridwan-hasan.png" alt="Mohammad Ridwan Hasan" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> মোহাম্মদ রিদওয়ান হাসান </h3>
@@ -409,7 +409,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="4">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="জাহিদুর রহমান" class="img-fluid card-img-top" />
+                                <img src="members/jahid-hasan.png" alt="জাহিদুর রহমান" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> জাহিদুর রহমান</h3>
@@ -426,7 +426,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="5">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="রবিউল করিম" class="img-fluid card-img-top" />
+                                <img src="members/rabiul.png" alt="রবিউল করিম" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> রবিউল করিম</h3>
@@ -443,7 +443,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="6">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="মুরাদ হোসেন" class="img-fluid card-img-top" />
+                                <img src="members/murad.png" alt="মুরাদ হোসেন" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> মুরাদ হোসেন</h3>
@@ -476,7 +476,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="8">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="ফায়াজ শাহেদ" class="img-fluid card-img-top" />
+                                <img src="members/fayaz-shahed.png" alt="ফায়াজ শাহেদ" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> ফায়াজ শাহেদ</h3>
@@ -526,7 +526,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="11">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="দিলারা খানম" class="img-fluid card-img-top" />
+                                <img src="members/dilara-khanom.png" alt="দিলারা খানম" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> দিলারা খানম </h3>
@@ -542,7 +542,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="12">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="সুলতান মারুফ তালহা" class="img-fluid card-img-top" />
+                                <img src="members/maruf-talha.png" alt="সুলতান মারুফ তালহা" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> সুলতান মারুফ তালহা </h3>
@@ -593,7 +593,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="15">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="মাসুদ রানা" class="img-fluid card-img-top" />
+                                <img src="members/masud-rana.png" alt="মাসুদ রানা" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> মাসুদ রানা </h3>
@@ -695,7 +695,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="21">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="উমার রাজী আল ফারূক" class="img-fluid card-img-top" />
+                                <img src="members/omar-raji.png" alt="উমার রাজী আল ফারূক" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> উমার রাজী আল ফারূক </h3>
@@ -712,7 +712,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="22">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="ফারহা জাবীন লিরা" class="img-fluid card-img-top" />
+                                <img src="members/farha-lira.png" alt="ফারহা জাবীন লিরা" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> ফারহা জাবীন লিরা </h3>
@@ -729,7 +729,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="23">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="কাজী আহনাফ তাহমিদ" class="img-fluid card-img-top" />
+                                <img src="members/kazi-ahnaf.png" alt="কাজী আহনাফ তাহমিদ" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> কাজী আহনাফ তাহমিদ </h3>
@@ -763,7 +763,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="25">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="আলী আম্মার মুয়াজ" class="img-fluid card-img-top" />
+                                <img src="members/ali-ammar-muaz.png" alt="আলী আম্মার মুয়াজ" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> আলী আম্মার মুয়াজ </h3>
@@ -965,7 +965,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="37">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="মীর ছিবগাতুল্লাহ তকি" class="img-fluid card-img-top" />
+                                <img src="members/mir-sibgatullah-toki.png" alt="মীর ছিবগাতুল্লাহ তকি" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> মীর ছিবগাতুল্লাহ তকি </h3>
@@ -1116,7 +1116,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="46">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="তামজীদুল ইসলাম" class="img-fluid card-img-top" />
+                                <img src="members/tamzid.png" alt="তামজীদুল ইসলাম" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> তামজীদুল ইসলাম </h3>
@@ -1167,7 +1167,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="49">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="সরোজ মেহেদী" class="img-fluid card-img-top" />
+                                <img src="members/soroj.png" alt="সরোজ মেহেদী" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> সরোজ মেহেদী </h3>
@@ -1219,7 +1219,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="52">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="জায়েদ হাসনাইন" class="img-fluid card-img-top" />
+                                <img src="members/zayed.png" alt="জায়েদ হাসনাইন" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> জায়েদ হাসনাইন </h3>
@@ -1321,7 +1321,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="58">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="মো: তানভীর আহমেদ" class="img-fluid card-img-top" />
+                                <img src="members/tanvir-ahmed.png" alt="মো: তানভীর আহমেদ" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> মো: তানভীর আহমেদ </h3>
@@ -1389,7 +1389,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="62">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="জেরিন তাহসিন" class="img-fluid card-img-top" />
+                                <img src="members/jerin.png" alt="জেরিন তাহসিন" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> জেরিন তাহসিন </h3>
@@ -1406,7 +1406,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="63">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="আল ইমরান সুজন" class="img-fluid card-img-top" />
+                                <img src="members/imran-sujon.png" alt="আল ইমরান সুজন" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> আল ইমরান সুজন </h3>
@@ -1447,7 +1447,7 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/kawsar.poet" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -1508,14 +1508,14 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="69">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="আব্দুল্লাহ আল মিনহাজ" class="img-fluid card-img-top" />
+                                <img src="members/minhaj.png" alt="আব্দুল্লাহ আল মিনহাজ" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> আব্দুল্লাহ আল মিনহাজ </h3>
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/alminhaz.alminhaz" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -1525,14 +1525,14 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="70">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="মোস্তফা মাহাথির" class="img-fluid card-img-top" />
+                                <img src="members/mostofa-mahathir.png" alt="মোস্তফা মাহাথির" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> মোস্তফা মাহাথির </h3>
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/ibn.hasan.39" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -1593,7 +1593,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="74">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="মহিউদ্দিন হাসান" class="img-fluid card-img-top" />
+                                <img src="members/mohiuddin-hasan.png" alt="মহিউদ্দিন হাসান" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> মহিউদ্দিন হাসান </h3>
@@ -1610,7 +1610,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="75">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/alim.png" alt="সাইদুল ইসলাম" class="img-fluid card-img-top" />
+                                <img src="members/saidul-islam.png" alt="সাইদুল ইসলাম" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> সাইদুল ইসলাম </h3>
