--- a/index.html
+++ b/index.html
@@ -351,6 +351,9 @@
                         max-width: 230px;
                         height: auto;
                         top: -60px;
+                        left: 0;
+                        right: 0;
+                        margin: 0 auto;
                     }
                 </style>
 
