--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/alim.nehal.5" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -412,7 +412,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="4">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/jahid-hasan.png" alt="জাহিদুর রহমান" class="img-fluid card-img-top" />
+                                <img src="members/alim.png" alt="জাহিদুর রহমান" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> জাহিদুর রহমান</h3>
@@ -470,7 +470,7 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/SajjadSabbir24" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -486,7 +486,7 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/Faizurrahmanshahed" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -502,7 +502,7 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/kazi.salman.948" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -519,7 +519,7 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/lincolndu/" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -536,7 +536,7 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/Dilara.bangladesh" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -569,7 +569,7 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/iamabrarhamim" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -586,7 +586,7 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/jahidhasan.ndcimc" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -637,7 +637,7 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/farjana6akter" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -722,7 +722,7 @@
                                 <h4 class="card-text" style="font-size:14px;;"> সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/farhazabin.lira.9" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -739,7 +739,7 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/ahnaf.tahmi" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -756,7 +756,7 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/salman7789" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -773,7 +773,7 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/aam.mowaz" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -803,7 +803,7 @@
                                 <img src="members/towsif-mahmud.png" alt="তৌসিব মাহমুদ সোহান" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
-                                <h3 class="card-title" style="font-size: 18px;"> ২৭। তৌসিব মাহমুদ সোহান </h3>
+                                <h3 class="card-title" style="font-size: 18px;"> তৌসিব মাহমুদ সোহান </h3>
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
@@ -858,7 +858,7 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/souravAbdullah" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -925,7 +925,7 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/farhana.s.shuchi" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -1004,7 +1004,7 @@
                                 <img src="members/sanaullah-patwary.png" alt="সানাউল্লাহ পাটোয়ারী" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
-                                <h3 class="card-title" style="font-size: 18px;"> ৩৯। সানাউল্লাহ পাটোয়ারী </h3>
+                                <h3 class="card-title" style="font-size: 18px;"> সানাউল্লাহ পাটোয়ারী </h3>
                             </div>
                             <div class="card-footer text-body-secondary">
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
@@ -1177,7 +1177,7 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/sorojmehedi" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
@@ -1229,7 +1229,7 @@
                                 <h4 class="card-text" style="font-size:14px;;">সদস্য - কেন্দ্রীয় কমিটি </h4>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
+                                <a class="me-3" href="https://www.facebook.com/zayedhasnain" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
