--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="22">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/farha-lira.png" alt="ফারহা জাবীন লিরা" class="img-fluid card-img-top" />
+                                <img src="members/farha-lira.png?v=1.1" alt="ফারহা জাবীন লিরা" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> ফারহা জাবীন লিরা </h3>
