--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
                     <div class="col-md-3 mb-20 mt-50" data-number="23">
                         <div class="card">
                             <div class="card-header">
-                                <img src="members/kazi-ahnaf.png" alt="কাজী আহনাফ তাহমিদ" class="img-fluid card-img-top" />
+                                <img src="members/kazi-ahnaf.png?v=1.1" alt="কাজী আহনাফ তাহমিদ" class="img-fluid card-img-top" />
                             </div>
                             <div class="member-details card-body">
                                 <h3 class="card-title" style="font-size: 18px;"> কাজী আহনাফ তাহমিদ </h3>
