--- a/committee.html
+++ b/committee.html
@@ -527,12 +527,12 @@
                 {
                 "id": 23,
                 "name": "কাজী আহনাফ তাহমিদ",
-                "image": "members/kazi-ahnaf.png",
+                "image": "members/kazi-ahnaf.png?v=1.1",
                 "position": "সদস্য - কেন্দ্রীয় কমিটি",
                 "social": {
                     "facebook": "https://www.facebook.com/ahnaf.tahmi",
-                    "twitter": "#",
-                    "instagram": "#"
+                    "twitter": "https://x.com/jk_tahmid?s=21",
+                    "instagram": "https://www.instagram.com/jk_tahmid/"
                 }
                 },
                 {
