--- a/index.html
+++ b/index.html
@@ -740,8 +740,8 @@
                             </div>
                             <div class="card-footer text-body-secondary">
                                 <a class="me-3" href="https://www.facebook.com/ahnaf.tahmi" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
-                                <a class="me-3" href="#" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
+                                <a class="me-3" href="https://x.com/jk_tahmid?s=21" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
+                                <a class="me-3" href="https://www.instagram.com/jk_tahmid/" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
                             </div>
                         </div>
                     </div>
