--- a/index.html
+++ b/index.html
@@ -742,6 +742,8 @@
                                 <a class="me-3" href="https://www.facebook.com/ahnaf.tahmi" target="_blank" aria-label="Follow us on Facebook"><i class="zmdi fs-2 text-primary zmdi-facebook"></i></a>
                                 <a class="me-3" href="https://x.com/jk_tahmid?s=21" target="_blank" aria-label="Follow us on X"><i class="zmdi fs-2 text-danger zmdi-twitter"></i></a>
                                 <a class="me-3" href="https://www.instagram.com/jk_tahmid/" target="_blank" aria-label="Follow us on Instagram"><i class="zmdi fs-2 text-danger zmdi-instagram"></i></a>
+                                <a class="me-3" href="https://youtube.com/@jktahmid" target="_blank" aria-label="Follow us on YouTube"><i class="zmdi fs-2 text-danger zmdi-youtube"></i></a>
+                            
                             </div>
                         </div>
                     </div>
